--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img src="https://cdn.shopify.com/s/files/1/0708/4605/4708/files/True_Botanicals_Logo.png?v=1715228088" alt="header logo">
+          <img src="https://static.augustinusbader.com/version1716454494/frontend/AugustinusBader/hyva/en_US/images/logo.svg" alt="header logo">
         </div>
       </div>
     </header>
@@ -30,7 +30,7 @@
     <!-- end of footer -->
 
     <!-- scripts -->
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/C6DxBaUQi3POnS8Yh75OATi76xqVTnjgXARPZcpI?languageCode=en" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/29xXA69nzLm8gEz1NYoWfw5sRbb5qmwfsoHGpGq0?languageCode=en" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
