--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img src="https://static.augustinusbader.com/version1716454494/frontend/AugustinusBader/hyva/en_US/images/logo.svg" alt="header logo">
+          <img src="https://www.mybobs.com/assets/bobs-logo.svg" alt="header logo">
         </div>
       </div>
     </header>
@@ -30,7 +30,7 @@
     <!-- end of footer -->
 
     <!-- scripts -->
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/29xXA69nzLm8gEz1NYoWfw5sRbb5qmwfsoHGpGq0?languageCode=en" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/68nViUkK5ofPmaK3sZFgLXwh8bqJb1XAt1McY8D6?languageCode=en" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
